# mcp-server-for-doctoralliance

./: .env.example  .gitignore  README.md  requirements.txt
docs/: ai_tool_usage.md
doctoralliance_agent/: README.md  pyproject.toml
doctoralliance_agent/src/doctoralliance_agent/: crew.py  data_fetcher.py  main.py  persona_resolver.py  server.py  streamlit_app.py  summary_builder.py
doctoralliance_agent/src/doctoralliance_agent/agents/: gemini_agent.py  prompt_builder.py
doctoralliance_agent/src/doctoralliance_agent/delivery/: channel_selector.py  email.py  logger.py  popup.py  sms_gateway.py
doctoralliance_agent/src/doctoralliance_agent/escalation/: reminder_scheduler.py  retry_agent.py
doctoralliance_agent/src/doctoralliance_agent/gmail/: gmail_agent.py  nlp_parser.py  response_handler.py
